# serde-structprop

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-MIT  README.md  SECURITY.md  cog.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-binaries.yml  ci.yml  commit-check.yml  dependabot-automerge.yml  release.yml
crates/serde-structprop/: Cargo.toml
crates/serde-structprop/src/: de.rs  error.rs  lexer.rs  lib.rs  parse.rs  ser.rs
crates/serde-structprop/tests/: integration.rs
crates/structprop-validator/: Cargo.toml  README.md
crates/structprop-validator/src/: main.rs
src/: de.rs  lexer.rs  lib.rs  parse.rs  ser.rs
tests/: integration.rs  prop.rs
